manifests/app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: modern-ui
  labels:
    name: modern-ui
spec:
  host: modern-ui.apps.openshift.rhcasalab.com
  path: /
  to:
    kind: Service
    name: modern-ui
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
